--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
+<meta name="google-site-verification" content="google3ceaeb9ce1f1aca9.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0f172a" />
@@ -428,3 +429,4 @@
 </script>
 </body>
 </html>
+
