--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-<meta name="google-site-verification" content="google3ceaeb9ce1f1aca9.html" />
+<meta name="google-site-verification" content="y9dPy4bOtAOI4fyIwtAtG-SYXHLypulS6OlwMGTT6hc" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0f172a" />
@@ -429,4 +429,3 @@
 </script>
 </body>
 </html>
-
