--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <h1>Externalisez vos marchés publics.<br>Gagnez du temps. Gagnez des marchés.</h1>
       <p>
         Camala accompagne les TPE : veille ciblée, analyse du DCE, rédaction du mémoire technique et dépôt des offres.
-        Vous gardez la main sur le chiffrage.
+        Vous gardez la main sur le chiffrage. Basé à Dijon, nous sommes disponible pour vous quelque soit votre localisation
       </p>
 
       <div class="hero-actions">
@@ -263,12 +263,12 @@
         <div class="card">
           <div class="icon">⏳</div>
           <div class="k">Manque de temps</div>
-          <p>Entre l’opérationnel et la gestion, répondre devient un “projet du dimanche”.</p>
+          <p>Entre les contraintes opérationnelles et la gestion de l’entreprise, la réponse aux appels d’offres manque de temps et de méthode.</p>
         </div>
         <div class="card">
           <div class="icon">🎯</div>
           <div class="k">Manque de méthode</div>
-          <p>Sans mémoire technique solide, tu réponds “dans le vide”, et tu le paies en heures.</p>
+          <p>Sans mémoire technique solide, l’effort de réponse est important, mais l’impact reste faible : le temps investi n’est pas optimisé..</p>
         </div>
       </div>
     </div>
@@ -295,13 +295,13 @@
 
         <div class="panel">
           <h3>Ce que Camala ne fait pas</h3>
-          <p>On ne touche pas à tes marges.</p>
+          <p>On ne touche pas à vos marges.</p>
           <ul class="list">
-            <li><span class="tick">✓</span> Pas de chiffrage à ta place</li>
+            <li><span class="tick">✓</span> Pas de chiffrage à votre place</li>
             <li><span class="tick">✓</span> Pas de dossiers “copier-coller”</li>
             <li><span class="tick">✓</span> Pas de réponse “au hasard” : Go/No-Go d’abord</li>
           </ul>
-          <p style="margin-top:.9rem;color:var(--muted)">👉 Tu gardes la main. On fait gagner du temps et des points.</p>
+          <p style="margin-top:.9rem;color:var(--muted)">👉 Vous conservez la main. On fait gagner du temps et des points.</p>
         </div>
       </div>
     </div>
@@ -311,7 +311,7 @@
     <div class="container">
       <div class="section-title">
         <h2>Le process en 4 étapes</h2>
-        <p>Simple : tu valides les Go/No-Go, on produit, on dépose. Zéro friction.</p>
+        <p>Simple : Vous validez les Go/No-Go, on produit, on dépose.</p>
       </div>
 
       <div class="steps">
@@ -327,7 +327,7 @@
     <div class="container">
       <div class="ctaBox">
         <h3>Échange gratuit</h3>
-        <p>Tu me dis ton métier et ta zone. Je te dis si ça vaut le coup (et si ce n’est pas le cas, je te le dis aussi).</p>
+        <p>Vous nous donnez votre activité et votre zone d'intervention. Je vous apporterai un retour objectif sur l’intérêt de la proposition, qu’il soit positif ou non.</p>
 
         <form id="leadForm" method="POST" style="max-width:640px;margin:1.2rem auto 0;text-align:left">
           <div class="formgrid">
@@ -353,7 +353,7 @@
           </div>
 
           <label for="besoin">Votre besoin *</label>
-          <textarea id="besoin" name="besoin" required placeholder="Ex : plomberie / Côte-d'Or / marchés < 200k / besoin mémoire technique"></textarea>
+          <textarea id="besoin" name="besoin" required placeholder="Ex : votre métier / Côte-d'Or / marchés < 200k / besoin mémoire technique"></textarea>
 
           <input type="text" name="_gotcha" style="display:none" />
           <button class="btn btn-primary" type="submit" style="width:100%;margin-top:12px">Envoyer</button>
@@ -429,3 +429,4 @@
 </script>
 </body>
 </html>
+
