--- a/marches-publics-tpe.html
+++ b/marches-publics-tpe.html
@@ -9,7 +9,7 @@
   <title>Externalisation des marchés publics pour TPE | Camala</title>
 
   <meta name="description"
-        content="Externalisation des marchés publics pour TPE : veille ciblée, analyse RC/CCTP, rédaction du mémoire technique et dépôt des offres. Accompagnement sans chiffrage." />
+        content="Accompagnement des TPE à Dijon et en Côte-d’Or, externalisation des marchés publics pour TPE : veille ciblée, analyse RC/CCTP, rédaction du mémoire technique et dépôt des offres. Accompagnement sans chiffrage." />
 
   <link rel="canonical" href="https://votre-domaine.fr/marches-publics-tpe.html" />
 
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
